* Fixed scrollbars being rendered all the time

--- a/static/css/main.sass
+++ b/static/css/main.sass
@@ -68,7 +68,7 @@ body
             border-radius: 10px
             box-shadow: $box-shadow
             background-color: $code-color
-            overflow: scroll
+            overflow-y: auto
 
         .codehilite
             background-color: unset
